bootstrap my project

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,1 +1,5 @@
-<p>quotes works!</p>
+<div class="container-fluid">
+    <h1 class="text-center">WELCOME<br>TO<br>THE QUOTES APP</h1>
+    <hr>
+    <div class="col-md-12 boxed"></div>
+</div>
