--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,5 +1,10 @@
 <div class="container-fluid">
     <h1 class="text-center">WELCOME<br>TO<br>THE QUOTES APP</h1>
     <hr>
-    <div class="col-md-12 boxed"></div>
+    <div class="col-md-12 boxed">
+        <div *ngFor='let quote of quotes; let i = index'>
+            <h3 class="padding-quote">{{quote.name}}</h3>
+            <button (click)='toggleDetails(i)'>Show More</button>
+    </div>
+</div>
 </div>
