fix issues in the quote-detail component,adjust styling of app

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,6 +1,6 @@
 <div class="padding">
-    <p>Author: {{ quote.author }}</p>
-    <p>Submitted: {{quote.submitDate|dateAgo}} by {{quote.submitter}}.</p>
+    <p>Author: {{ quotes.author }}</p>
+    <p>Submitted: {{quotes.submitDate|dateAgo}} by {{quotes.submitter}}.</p>
 </div>
 
 <div class="btn-group" role="group">
