--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap');
+body {
+   background-color: rgb(57, 57, 128);
+}
 .boxed {
     border: 5px solid black ;
     text-align: center;
@@ -9,11 +12,11 @@
     margin: 10px 0px 20px 0px;
     font-weight: bolder;
     font-family: 'Playfair Display SC', serif;
-    background-color: black;
+    background-color: rgb(23, 23, 59);
     color: white;
 }
 .container {
-    color:black;
+    color:rgb(23, 23, 59);
     font-weight: bold;
     font-family: 'Playfair Display SC', serif;
 }
