--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -9,3 +9,11 @@
     </div>
    </div>
 </div>   
+
+<div class="container">
+    <div class="jumbotron">
+        <div class="row">
+            <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
+        </div>
+    </div>
+</div>
