--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container1">
     <h2 class="text-center">Have a quote you would like to share with the rest of us?</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
