add highlight direcctive,styling,web.config file and other minor debugging

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,7 +1,6 @@
 
 <div class="btn-group" role="group">
-    <a class="btn btn-default" href (click)="likeVote()"><span class="fa fa-thumbs-up"
-            aria-hidden="true"></span></a>
+    <a class="btn btn-default" href (click)="likeVote()"><span class="fa fa-thumbs-up" aria-hidden="true"></span></a>
 </div>
 <div class="btn-group" role="group">
     {{ numberOfLikes }}
