--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,41 +1,39 @@
 
 <div class="container1">
-    <h2 class="text-center">Have a quote you would like to share with the rest of us?</h2>
-    <hr>
+    <br>
+    <br>
+    <h2 class="userform"><strong><u>POST A QUOTE</u></strong></h2>
+    <br>
+    <br>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
         <div class="form-group">
-            <h4>Input your quote here:</h4>
-            <label for="name"></label>
-            <textarea class="form-control" id="name" rows="4" [(ngModel)]="newQuote.name" name="name" #name="ngModel"
+            <textarea class="form-control" id="name" placeholder="TYPE YOUR QUOTE HERE" rows="4" [(ngModel)]="newQuote.name" name="name" #name="ngModel"
                 required></textarea>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-                <p>The actual quote is required</p>
+                <p>Please provide an actual quote</p>
             </div>
         </div>
 
         <div class="form-group">
-            <h4>Who is the author of this masterpiece?</h4>
-            <label for="author"></label>
-            <input type="text" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author"
+            <input type="text" placeholder="NAME OF ORIGINAL AUTHOR" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author"
                 #author="ngModel">
             <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
-                <p>Author is required</p>
+                <p>Please provide the author's name</p>
             </div>
 
         </div>
 
         <div class="form-group">
-            <h4>What is your name?</h4>
-            <label for="submitter"></label>
-            <input type="text" required class="form-control" id="submitter" [(ngModel)]="newQuote.submitter"
+            <input type="text" placeholder="YOUR NAME" required class="form-control" id="submitter" [(ngModel)]="newQuote.submitter"
                 name="submitter" #submitter="ngModel">
             <div [hidden]="submitter.valid || submitter.pristine" class="alert alert-danger">
-                <p>Your name is required</p>
+                <p>Please provide your name</p>
             </div>
 
         </div>
         <br>
 
-        <button type="submit" class="btn btn-success">Submit Quote</button>
+        <button type="submit" class="btn">Submit Quote</button>
     </form>
+    
 </div>
