--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,6 +1,11 @@
 <div class="container-fluid">
-    <h1 class="text-center">WELCOME<br>TO<br>THE QUOTES APP</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="title"><u>WELCOME TO THE QUOTES APP</u></h1>
+    <br>
     <hr>
+    <br>
     <div class="col-md-12 boxed">
         <div *ngFor='let quote of quotes; let i = index'>
             <h3 class="padding-quote">{{quote.name}}</h3>
@@ -8,16 +13,26 @@
                 <p>Author: {{ quote.author }}</p>
                 <p>Submitted: {{ quote.submitDate|dateAgo }} by {{quote.submitter}}.</p>
             </div>
-            <button (click)='toggleDetails(i)'>Show More</button>
+            <button (click)='toggleDetails(i)' class="btnmore">Show More</button>
             <app-quote-detail *ngIf = 'quote.showAuthor' [quotes]= 'quotes' (isComplete)= 'deleteQuote($event,i)'></app-quote-detail>
     </div>
    </div>
 </div>   
-
+<br>
+<br>
+<br>
+<hr>
+<br>
+<br>
+<br>
 <div class="container">
-    <div class="jumbotron">
-        <div class="row">
+    <div>
+        <div>
             <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
         </div>
     </div>
+
+    <br>
+    <br>
+    <br>
 </div>
